--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
         <title>Colorama</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/index.css"/>
     </head>
 
     <body style="margin: 0; padding: 0;overflow: hidden; background-color:#EEEEEE">
