--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/index.css"/>
     </head>
 
-    <body style="margin: 0; padding: 0;overflow: hidden; background-color:#EEEEEE">
+    <body style="margin: 0; padding: 0;overflow: hidden; background-color:#3dc554">
         <script type="text/javascript" src="public/scripts/vendor.js"></script>
         <script type="text/javascript" src="public/scripts/all.js"></script>
     </body>
